--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "whatsapp-web.js",
-  "version": "1.26.1-alpha.3",
-  "description": "Library for interacting with the WhatsApp Web API ",
+  "name": "@ismailkhcm/whatsapp-web.js",
+  "version": "1.26.2",
+  "description": "Enhanced WhatsApp Web API client with improved stability and features",
   "main": "./index.js",
   "typings": "./index.d.ts",
   "scripts": {
     "test": "mocha tests --recursive --timeout 5000",
-    "test-single": "mocha",
+    "test:specific": "mocha",
     "shell": "node --experimental-repl-await ./shell.js",
-    "generate-docs": "npx jsdoc --configure .jsdoc.json --verbose"
+    "generate-docs": "jsdoc --configure .jsdoc.json --verbose",
+    "lint": "eslint . --ext .js --ignore-path .gitignore",
+    "lint:fix": "eslint . --ext .js --ignore-path .gitignore --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pedroslopez/whatsapp-web.js.git"
+    "url": "git+https://github.com/IsmailKhCM/whatsapp-web.js.git"
   },
   "keywords": [
     "whatsapp",
@@ -20,21 +22,24 @@
     "api",
     "bot",
     "client",
-    "node"
+    "node",
+    "stable",
+    "enhanced"
   ],
-  "author": "Pedro Lopez",
+  "author": "Ismail Kharoub <ismailkharoub@gmail.com>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/pedroslopez/whatsapp-web.js/issues"
+    "url": "https://github.com/IsmailKhCM/whatsapp-web.js/issues"
   },
-  "homepage": "https://wwebjs.dev/",
+  "homepage": "https://github.com/IsmailKhCM/whatsapp-web.js",
   "dependencies": {
     "@pedroslopez/moduleraid": "^5.0.2",
-    "fluent-ffmpeg": "2.1.2",
+    "fluent-ffmpeg": "^2.1.2",
+    "jsqr": "^1.3.1",
     "mime": "^3.0.0",
-    "node-fetch": "^2.6.9",
-    "node-webpmux": "3.1.7",
-    "puppeteer": "^18.2.1"
+    "node-fetch": "^2.6.5",
+    "node-webpmux": "^3.1.0",
+    "puppeteer": "^13.0.0"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.12",
@@ -52,8 +57,15 @@
     "node": ">=18.0.0"
   },
   "optionalDependencies": {
-    "archiver": "^5.3.1",
-    "fs-extra": "^10.1.0",
-    "unzipper": "^0.10.11"
+    "bufferutil": "^4.0.1",
+    "utf-8-validate": "^5.0.2",
+    "openai": "^4.20.0",
+    "@anthropic-ai/sdk": "^0.10.0",
+    "@google/generative-ai": "^0.1.3",
+    "mongodb": "^6.3.0",
+    "sequelize": "^6.35.1",
+    "sqlite3": "^5.1.6",
+    "pg": "^8.11.3",
+    "mysql2": "^3.6.5"
   }
 }
